loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:1: error: ')' expected but integer literal found.
for (i <- 1 448) {
            ^LoopCourseForest:25: error: illegal start of simple expression
	}
        ^