loopfor.LoopCourseForest.scala.code
for (i <- 1 448) {
  avance()
  avance()
  avance()
  avance()
  gauche()
  avance()
  avance()
  droite()
  avance()
  avance()
  avance()
  avance()
  droite()
  avance()
  avance()
  gauche()
  avance()
  avance()
  avance()
  avance()
  
}